--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -78,19 +78,28 @@ h6 {
   }
 
   .backdrop {
-	  -moz-box-shadow: 0px 6px 5px #111; 
-	  -webkit-box-shadow: 0px 6px 5px #111; 
-	  box-shadow: 0px 2px 10px #111; 
-	  -moz-border-radius:190px; 
-	  -webkit-border-radius:190px; 
-	  border-radius:190px;
+	  -moz-box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3); 
+	  -webkit-box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3); 
+	  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3); 
+	  -moz-border-radius: 50%; 
+	  -webkit-border-radius: 0%; 
+	  border-radius: 50%;
+	  transition: transform 0.3s ease, box-shadow 0.3s ease;
+	  border: 4px solid rgba(255, 255, 255, 0.3);
+  }
+
+  .backdrop:hover {
+	  transform: scale(1.05);
+	  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.4);
   }
 
   .linktree {
-	  width: 120px;
-	  height: 120px;
-	  background-image: url("https://avatars.githubusercontent.com/u/106186354?v=4");
+	  width: 175px;
+	  height: 175px;
+	  object-fit: cover;
 	  background-size: cover;
 	  background-repeat: no-repeat;
-	  background-position: 50% 50%;
+	  background-position: center;
+	  margin: 0 auto;
+	  display: block;
   }
